ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    # adds 301 redirect with trailing slash
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/kube)$ $1/kube/ permanent;
spec:
  tls:
  - hosts:
    - kubernetes-dashboard.px
    secretName: kubernetes-dashboard-certs
  rules:
  - host: kubernetes-dashboard.px
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
