lighthouse-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lighthouse
  namespace: kube-system
spec:
  rules:
  - host: lighthouse.px
    http:
      paths:
      - path: /
        backend:
          serviceName: px-lighthouse
          servicePort: 80
