minio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio
  namespace: default
spec:
  rules:
  - host: minio.px
    http:
      paths:
      - path: /
        backend:
          serviceName: minio-service
          servicePort: 9000
